[package]
name = "pr-butler"
version = "0.1.0"
authors = ["Aleksander Długopolski <aleksander.dlugopolski@logihub.pl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = ">= 0.9.22"
dotenv = ">= 0.15.0"
serde = ">= 0"
serde_json = ">= 0"
